dashboard icons now align correctrly

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@ body{
     background-color: rgb(18, 100, 207);
     display: grid;
     grid-template-rows: 60% 1fr;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 3fr;
+    
 }
 
 .dashboard{
@@ -32,12 +33,16 @@ body{
     justify-content: space-between;
     width: 33%;
     margin: 0 auto;
+    /* border: 1px solid red; */
 }
 
 .top-icons{
+    /* border: 1px solid red; */
     width: 4rem;
-    margin-top: 20px;
-    
+    position: relative;
+    right: 20px;
+    margin-top: 10px;
+
 }
 
 .dashboard-item{
